# gitless

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yaml
src/: error.rs  lib.rs  main.rs
