[package]
name = "gitless"
version = "1.0.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2021"
description = "Clone and degit a repo"
keywords = ["git", "degit",]
repository = "https://github.com/c12i/gitless"
readme = "./README.md"
license = "MIT"

[lib]
path = "./src/lib.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
git2 = "0.18.1"
thiserror = "1.0.56"
